// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> contains form 1`] = `
<MemoryRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "rykilg",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "rykilg",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Login>
      <div
        className="auth"
      >
        <div
          className="auth-container"
        >
          <div
            className="card"
          >
            <header
              className="auth-header"
            >
              <h1
                className="auth-title"
              >
                BUCKET-LIST
              </h1>
            </header>
            <div
              className="auth-content"
            >
              <p
                className="text-xs-center"
              >
                LOGIN TO CONTINUE
              </p>
              <form
                id="login-form"
                method="POST"
                onSubmit={[Function]}
              >
                <div
                  className="form-group"
                >
                  <label>
                    Email Address
                  </label>
                  <input
                    className="form-control underlined"
                    id="email"
                    name="email"
                    onChange={[Function]}
                    placeholder="Your Email address"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="form-group"
                >
                  <label>
                    Password
                  </label>
                  <input
                    className="form-control underlined"
                    id="password"
                    name="password"
                    onChange={[Function]}
                    placeholder="Your Password"
                    type="password"
                    value=""
                  />
                </div>
                <div
                  className="form-group"
                >
                  <button
                    className="btn btn-block btn-primary"
                    id="login-user"
                    type="submit"
                  >
                    Login
                  </button>
                </div>
                <div
                  className="form-group"
                >
                  <p
                    className="text-muted text-xs-center"
                  >
                    Do not have an account? 
                    <Link
                      replace={false}
                      to="/register"
                    >
                      <a
                        href="/register"
                        onClick={[Function]}
                      >
                        Register
                      </a>
                    </Link>
                  </p>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </Login>
  </Router>
</MemoryRouter>
`;

exports[`<Login /> should change the values to the email input 1`] = `
<MemoryRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "qyj9re",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "qyj9re",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Login>
      <div
        className="auth"
      >
        <div
          className="auth-container"
        >
          <div
            className="card"
          >
            <header
              className="auth-header"
            >
              <h1
                className="auth-title"
              >
                BUCKET-LIST
              </h1>
            </header>
            <div
              className="auth-content"
            >
              <p
                className="text-xs-center"
              >
                LOGIN TO CONTINUE
              </p>
              <form
                id="login-form"
                method="POST"
                onSubmit={[Function]}
              >
                <div
                  className="form-group"
                >
                  <label>
                    Email Address
                  </label>
                  <input
                    className="form-control underlined"
                    id="email"
                    name="email"
                    onChange={[Function]}
                    placeholder="Your Email address"
                    type="text"
                    value="example@email.com"
                  />
                </div>
                <div
                  className="form-group"
                >
                  <label>
                    Password
                  </label>
                  <input
                    className="form-control underlined"
                    id="password"
                    name="password"
                    onChange={[Function]}
                    placeholder="Your Password"
                    type="password"
                    value=""
                  />
                </div>
                <div
                  className="form-group"
                >
                  <button
                    className="btn btn-block btn-primary"
                    id="login-user"
                    type="submit"
                  >
                    Login
                  </button>
                </div>
                <div
                  className="form-group"
                >
                  <p
                    className="text-muted text-xs-center"
                  >
                    Do not have an account? 
                    <Link
                      replace={false}
                      to="/register"
                    >
                      <a
                        href="/register"
                        onClick={[Function]}
                      >
                        Register
                      </a>
                    </Link>
                  </p>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </Login>
  </Router>
</MemoryRouter>
`;

exports[`<Login /> should change the values to the password input 1`] = `
<MemoryRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "ix6olm",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "ix6olm",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Login>
      <div
        className="auth"
      >
        <div
          className="auth-container"
        >
          <div
            className="card"
          >
            <header
              className="auth-header"
            >
              <h1
                className="auth-title"
              >
                BUCKET-LIST
              </h1>
            </header>
            <div
              className="auth-content"
            >
              <p
                className="text-xs-center"
              >
                LOGIN TO CONTINUE
              </p>
              <form
                id="login-form"
                method="POST"
                onSubmit={[Function]}
              >
                <div
                  className="form-group"
                >
                  <label>
                    Email Address
                  </label>
                  <input
                    className="form-control underlined"
                    id="email"
                    name="email"
                    onChange={[Function]}
                    placeholder="Your Email address"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="form-group"
                >
                  <label>
                    Password
                  </label>
                  <input
                    className="form-control underlined"
                    id="password"
                    name="password"
                    onChange={[Function]}
                    placeholder="Your Password"
                    type="password"
                    value="milimani"
                  />
                </div>
                <div
                  className="form-group"
                >
                  <button
                    className="btn btn-block btn-primary"
                    id="login-user"
                    type="submit"
                  >
                    Login
                  </button>
                </div>
                <div
                  className="form-group"
                >
                  <p
                    className="text-muted text-xs-center"
                  >
                    Do not have an account? 
                    <Link
                      replace={false}
                      to="/register"
                    >
                      <a
                        href="/register"
                        onClick={[Function]}
                      >
                        Register
                      </a>
                    </Link>
                  </p>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </Login>
  </Router>
</MemoryRouter>
`;
